# everlight-agents

./: .env.example  .env.local  .gcloudignore  .gitignore  .pre-commit-config.yaml  CRUSH.md  README.md  SPLIT_SUMMARY.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  send_test_message.py
ai/: agent.py  default_agents.py
ai/comms/: __init__.py  channels.py  send_message.py  send_message_cloud.py  send_message_local.py
ai/default_prompts/: eforos.md  safine.md
ai/integrations/: messaging.py
ai/tools/: __init__.py  brief.py  chat.py  chat_naming.py  chat_seed.py  communication.py  core.py  data.py  notes.py  slate.py  utilities.py
api/: agent_endpoint.py
db/: embedding.py  models.py  session.py
docs/: LOCAL_DEVELOPMENT.md
evals/: README.md  eforos_scenarios.json  run_eforos_evals.py  run_safine_evals.py
evals/prompts/: eforos_v1.md  eforos_v2_claude.md  eforos_v3_tommy.md  initial_test_eforos.md
evals/scenarios/: 14_context_switching_burn_tax_mitigation.json  41_subscription_cleanup_and_budget_alerts.json  59_dating_app_catfishing_detection_from_language_and_metadata.json  62_supply_chain_vendor_failure_early_warning_from_latencies.json  65_creative_collaboration_credit_and_version_history_inference.json  story_02_the_silent_guardian.json
evals/scenarios/eforos/: 12_grief_anniversary_support.json  65_attribution_gap_project_x.json  (+7 more)
tests/: conftest.py  test_chat_models.py  test_chat_seeding.py  test_chat_tools.py  test_data_tools.py  test_notes_tools.py  test_slate_tools.py  test_utilities_tools.py
(+2 files in other folders)
