[project]
name = "everlight-agents"
version = "0.1.0"
description = "Independent AI Agent Service for Everlight"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "genkit>=0.4.0",
    "genkit-plugin-google-genai>=0.4.0",
    "google-genai>=1.23.0",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.9",
    "sqlalchemy>=2.0.41",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]